--- a/src/main/java/views/products/modular/ModularCommonServicesView.form
+++ b/src/main/java/views/products/modular/ModularCommonServicesView.form
@@ -152,7 +152,7 @@
         <properties/>
         <border type="none" title="Precio final de servicio "/>
         <children>
-          <component id="6b4d9" class="javax.swing.JTextField" binding="cupFinalPriceTextField">
+          <component id="6b4d9" class="javax.swing.JTextField" binding="clientFinalPriceTextField">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
